# anymal_c_simple_description

./: CMakeLists.txt  README.md  package.xml
config/rviz/: standalone.rviz
launch/: description.launch.py  standalone.launch.py  standalone_xacro.launch.py
urdf/: anymal.urdf.xacro  anymal_gazebo.xacro  anymal_main.xacro  lidar.xacro
