<?xml version="1.0"?>

<package format="3">

  <name>anymal_c_simple_description</name>
  <version>1.0.13</version>
  <description>ANYmal C Description Package</description>

  <license>BSD-3</license>

  <author email="lisler@anybotics.com">Linus Isler</author>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
